@@ -1,4 +1,12 @@
-2007-05-23  Martin Leidig  <mleidig@schlund.de>
+2007-05-25  jtl  <jtl@schlund.de>
+
+	* src/de/schlund/pfixcore/util/DumpText.java: 
+	* src/de/schlund/pfixcore/util/ImportText.java: new tools to dump and 
+	import used include parts 
+	* projects/dumptext.sh:
+	* projects/importtext.sh: use the tools above.
+
+ 2007-05-23  Martin Leidig  <mleidig@schlund.de>
 
 	Added form submit token mechanism which can be used to prevent
 	duplicate form submissions and handle transactional processing
